feature1 branch code1

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p> this is contact page is also Modified</p>
+    <p> this is contact page for Feature1 branch</p>
 
     <p> Modified pages for new branch</p>
 </body>
