--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p> this is contact page for Feature1 branch</p>
+    <p>modified code for feature branch</p>
 
     <p> Modified pages for new branch</p>
 </body>
